--- a/resources/css/front/checkout_view.css
+++ b/resources/css/front/checkout_view.css
@@ -55,20 +55,16 @@
     }
 }
 
-.item-with-dropdowns {
+.item-with-dropdowns-inline {
     display: flex;
-    flex-direction: column;
-    gap: 4px;
+    align-items: center;
+    gap: 0.75rem;
 }
 
-.item-name {
-    font-weight: 600;
-}
-
-.dropdown-group {
+.dropdown-group-inline {
     display: flex;
+    align-items: center;
     gap: 0.5rem;
-    flex-wrap: wrap;
 }
 
 .clubhouse-select select,
@@ -78,12 +74,15 @@
     border: 1px solid #ccc;
     background-color: #fff;
     font-size: 0.9rem;
-    min-width: 160px;
+    min-width: 150px;
 }
 
-.coach-select select {
-    border-color: #aaa;
+.clubhouse-select select:disabled,
+.coach-select select:disabled {
+    background-color: #f2f2f2;
+    cursor: not-allowed;
 }
+
 
 
 
